--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 	            <div class="col-md-7 d-flex align-items-center">
 	            	<div class="minecraft_content">
 		                <h2>Create your <span class="blue">Minecraft server</span> today!</h2>
-		                <p>Everyone can create their own Minecraft server. Change your server configuration, change your version (Vanilla, Paper, Paper, Spigot,..) or install plugins or mods whenever your want with our Minecraft hosting.Your Minecraft server hosted by AhjinHosting has lots of exclusives features!
+		                <p>Everyone can create their own Minecraft server. Change your server configuration, change your version (Vanilla, Paper, Spigot,..) or install plugins or mods whenever your want with our Minecraft hosting.Your Minecraft server hosted by AhjinHosting has lots of exclusives features!
 						</p>
 	            	</div>
 	            </div>
