--- a/minecraft.html
+++ b/minecraft.html
@@ -99,10 +99,10 @@
             		<div class="row">
             			<div class="col-lg-4 col-md-0">
             				<div class="card mc-card mb-0 text-center">
-            					<h2 class="mb-0">Ryzen 7 5800X</h2>
-								<h2 class="mb-0">DDR4 RAM</h2>
-            					<div class="card-header py-">
-            						<h2 class="mb-0">Plan One</h2>
+								<img src="assets/images/dirt.png" class="img-fluid plan-icons">
+            					<div class="card-header py-4">
+            						<h2 class="mb-0">DIRT PLAN</h2>
+									<li><i class=></i> Ryzen 7 5800X</li>
             					</div>
             					<div class="card-price py-1">
             						PHP 165 / <span>month</span>
@@ -122,10 +122,10 @@
             			</div>
             			<div class="col-lg-4 col-md-0">
             				<div class="card mc-card mb-0 text-center">
-            					<h2 class="mb-0">Ryzen 7 5800X</h2>
-								<h2 class="mb-0">DDR4 RAM</h2>
-            					<div class="card-header py-">
-            						<h2 class="mb-0">Plan Two</h2>
+            					<img src="assets/images/stone.png" class="img-fluid plan-icons">
+            					<div class="card-header py-4">
+            						<h2 class="mb-0">STONE PLAN</h2>
+									<li><i class=></i> Ryzen 7 5800X</li>
             					</div>
             					<div class="card-price py-1">
             						PHP 220 / <span>month</span>
@@ -145,10 +145,10 @@
             			</div>
             			<div class="col-lg-4 col-md-0">
             				<div class="card mc-card mb-0 text-center">
-            					<h2 class="mb-0">Ryzen 7 5800X</h2>
-								<h2 class="mb-0">DDR4 RAM</h2>
-            					<div class="card-header py-">
-            						<h2 class="mb-0">Plan Three</h2>
+            					<img src="assets/images/deepslate.png" class="img-fluid plan-icons">
+            					<div class="card-header py-4">
+            						<h2 class="mb-0">DEEPSLATE PLAN</h2>
+									<li><i class=></i> Ryzen 7 5800X</li>
             					</div>
             					<div class="card-price py-1">
             						PHP 275 / <span>month</span>
@@ -168,10 +168,10 @@
             			</div>
 						<div class="col-lg-4 col-md-0">
             				<div class="card mc-card mb-0 text-center">
-            					<h2 class="mb-0">Ryzen 7 5800X</h2>
-								<h2 class="mb-0">DDR4 RAM</h2>
-            					<div class="card-header py-">
-            						<h2 class="mb-0">Plan Four</h2>
+            					<img src="assets/images/DEBRIS.png" class="img-fluid plan-icons">
+            					<div class="card-header py-4">
+            						<h2 class="mb-0">DEBRIS PLAN</h2>
+									<li><i class=></i> Ryzen 7 5800X</li>
             					</div>
             					<div class="card-price py-1">
             						PHP 330 / <span>month</span>
@@ -191,10 +191,10 @@
             			</div>
             			<div class="col-lg-4 col-md-0">
             				<div class="card mc-card mb-0 text-center">
-            					<h2 class="mb-0">Ryzen 7 5800X</h2>
-								<h2 class="mb-0">DDR4 RAM</h2>
-            					<div class="card-header py-">
-            						<h2 class="mb-0">Plan Five</h2>
+            					<img src="assets/images/obsidian.png" class="img-fluid plan-icons">
+            					<div class="card-header py-4">
+            						<h2 class="mb-0">OBSIDIAN PLAN</h2>
+									<li><i class=></i> Ryzen 7 5800X</li>
             					</div>
             					<div class="card-price py-1">
             						PHP 385 / <span>month</span>
@@ -214,10 +214,10 @@
             			</div>
             			<div class="col-lg-4 col-md-0">
             				<div class="card mc-card mb-0 text-center">
-            					<h2 class="mb-0">Ryzen 7 5800X</h2>
-								<h2 class="mb-0">DDR4 RAM</h2>
-            					<div class="card-header py-">
-            						<h2 class="mb-0">Plan Six</h2>
+            					<img src="assets/images/bedrock.png" class="img-fluid plan-icons">
+            					<div class="card-header py-4">
+            						<h2 class="mb-0">OBSIDIAN PLAN</h2>
+									<li><i class=></i> Ryzen 7 5800X</li>
             					</div>
             					<div class="card-price py-1">
             						PHP 440 / <span>month</span>
@@ -242,10 +242,10 @@
             		<div class="row">
             			<div class="col-lg-4 col-md-0">
             				<div class="card mc-card mb-0 text-center">
-            					<h2 class="mb-0"> Ryzen 9 5900X</h2>
-								<h2 class="mb-0"> DDR4 RAM</h2>
-            					<div class="card-header py-">
-            						<h2 class="mb-0">Plan One</h2>
+            					<img src="assets/images/pillager.png" class="img-fluid plan-icons">
+            					<div class="card-header py-4">
+            						<h2 class="mb-0">PILLAGER PLAN</h2>
+									<li><i class=></i> Ryzen 9 5900X</li>
             					</div>
             					<div class="card-price py-1">
             						PHP 690 / <span>month</span>
@@ -265,10 +265,10 @@
             			</div>
 						<div class="col-lg-4 col-md-0">
             				<div class="card mc-card mb-0 text-center">
-            					<h2 class="mb-0">Ryzen 9 5900X</h2>
-								<h2 class="mb-0"> DDR4 RAM</h2>
-            					<div class="card-header py-">
-            						<h2 class="mb-0">Plan Two</h2>
+            					<img src="assets/images/zombie.png" class="img-fluid plan-icons">
+            					<div class="card-header py-4">
+            						<h2 class="mb-0">ZOMBIE PLAN</h2>
+									<li><i class=></i> Ryzen 9 5900X</li>
             					</div>
             					<div class="card-price py-1">
             						PHP 920 / <span>month</span>
@@ -288,10 +288,10 @@
             			</div>
             			<div class="col-lg-4 col-md-0">
             				<div class="card mc-card mb-0 text-center">
-            					<h2 class="mb-0">Ryzen 9 5900X</h2>
-								<h2 class="mb-0"> DDR4 RAM</h2>
-            					<div class="card-header py-">
-            						<h2 class="mb-0">Plan Three</h2>
+            					<img src="assets/images/SKELETON.png" class="img-fluid plan-icons">
+            					<div class="card-header py-4">
+            						<h2 class="mb-0">SKELETON PLAN</h2>
+									<li><i class=></i> Ryzen 9 5900X</li>
             					</div>
             					<div class="card-price py-1">
             						PHP 1,150 / <span>month</span>
@@ -311,10 +311,10 @@
             			</div>
             			<div class="col-lg-4 col-md-0">
             				<div class="card mc-card mb-0 text-center">
-            					<h2 class="mb-0">Ryzen 9 5900X</h2>
-								<h2 class="mb-0"> DDR4 RAM</h2>
-            					<div class="card-header py-">
-            						<h2 class="mb-0">Plan Four</h2>
+            					<img src="assets/images/wither.png" class="img-fluid plan-icons">
+            					<div class="card-header py-4">
+            						<h2 class="mb-0">WITHER PLAN</h2>
+									<li><i class=></i> Ryzen 9 5900X</li>
             					</div>
             					<div class="card-price py-1">
             						PHP 1,380 / <span>month</span>
@@ -334,10 +334,10 @@
             			</div>
             			<div class="col-lg-4 col-md-0">
             				<div class="card mc-card mb-0 text-center">
-            					<h2 class="mb-0">Ryzen 9 5900X</h2>
-								<h2 class="mb-0"> DDR4 RAM</h2>
-            					<div class="card-header py-">
-            						<h2 class="mb-0">Plan Five</h2>
+            					<img src="assets/images/enderman.png" class="img-fluid plan-icons">
+            					<div class="card-header py-4">
+            						<h2 class="mb-0">ENDERMAN PLAN</h2>
+									<li><i class=></i> Ryzen 9 5900X</li>
             					</div>
             					<div class="card-price py-1">
             						PHP 1,610 / <span>month</span>
@@ -357,10 +357,10 @@
             			</div>
             			<div class="col-lg-4 col-md-0">
             				<div class="card mc-card mb-0 text-center">
-            					<h2 class="mb-0">Ryzen 9 5900X</h2>
-								<h2 class="mb-0"> DDR4 RAM</h2>
-            					<div class="card-header py-">
-            						<h2 class="mb-0">Plan Six</h2>
+            					<img src="assets/images/spider.png" class="img-fluid plan-icons">
+            					<div class="card-header py-4">
+            						<h2 class="mb-0">SPIDER PLAN</h2>
+									<li><i class=></i> Ryzen 9 5900X</li>
             					</div>
             					<div class="card-price py-1">
             						PHP 1,840 / <span>month</span>
@@ -471,7 +471,7 @@
 				<div class="col-lg-6 d-flex align-items-center">
 					<div class="ddos_content">
 						<h2>Anti-DDoS</h2>
-						<p>Our premium dedicated game servers are protected by always-on 12Tbps DDoS protection highly suited to games such as Minecraft, RUST, ARK, CS:GO, FiveM and others.</p>
+						<p>Our premium dedicated game servers are protected by always-on 4Tbps DDoS protection highly suited to games such as Minecraft server.</p>
 					</div>
 				</div>
 			</div>
