--- a/minecraft.html
+++ b/minecraft.html
@@ -103,6 +103,8 @@
             					<div class="card-header py-4">
             						<h2 class="mb-0">DIRT PLAN</h2>
 									<li><i class=></i> Ryzen 7 5800X</li>
+									<li><i class=></i> Free 1 Allocation IP</li>
+									<li><i class=></i> Paper, Vanilla, Bedrock and more..</li>
             					</div>
             					<div class="card-price py-1">
             						PHP 165 / <span>month</span>
@@ -126,6 +128,8 @@
             					<div class="card-header py-4">
             						<h2 class="mb-0">STONE PLAN</h2>
 									<li><i class=></i> Ryzen 7 5800X</li>
+									<li><i class=></i> Free 1 Allocation IP</li>
+									<li><i class=></i> Paper, Vanilla, Bedrock and more..</li>
             					</div>
             					<div class="card-price py-1">
             						PHP 220 / <span>month</span>
@@ -149,6 +153,8 @@
             					<div class="card-header py-4">
             						<h2 class="mb-0">DEEPSLATE PLAN</h2>
 									<li><i class=></i> Ryzen 7 5800X</li>
+									<li><i class=></i> Free 1 Allocation IP</li>
+									<li><i class=></i> Paper, Vanilla, Bedrock and more..</li>
             					</div>
             					<div class="card-price py-1">
             						PHP 275 / <span>month</span>
@@ -172,6 +178,8 @@
             					<div class="card-header py-4">
             						<h2 class="mb-0">DEBRIS PLAN</h2>
 									<li><i class=></i> Ryzen 7 5800X</li>
+									<li><i class=></i> Free 1 Allocation IP</li>
+									<li><i class=></i> Paper, Vanilla, Bedrock and more..</li>
             					</div>
             					<div class="card-price py-1">
             						PHP 330 / <span>month</span>
@@ -195,6 +203,8 @@
             					<div class="card-header py-4">
             						<h2 class="mb-0">OBSIDIAN PLAN</h2>
 									<li><i class=></i> Ryzen 7 5800X</li>
+									<li><i class=></i> Free 1 Allocation IP</li>
+									<li><i class=></i> Paper, Vanilla, Bedrock and more..</li>
             					</div>
             					<div class="card-price py-1">
             						PHP 385 / <span>month</span>
@@ -218,6 +228,8 @@
             					<div class="card-header py-4">
             						<h2 class="mb-0">OBSIDIAN PLAN</h2>
 									<li><i class=></i> Ryzen 7 5800X</li>
+									<li><i class=></i> Free 1 Allocation IP</li>
+									<li><i class=></i> Paper, Vanilla, Bedrock and more..</li>
             					</div>
             					<div class="card-price py-1">
             						PHP 440 / <span>month</span>
@@ -246,6 +258,8 @@
             					<div class="card-header py-4">
             						<h2 class="mb-0">PILLAGER PLAN</h2>
 									<li><i class=></i> Ryzen 9 5900X</li>
+									<li><i class=></i> Free 2 Allocation IP</li>
+									<li><i class=></i> Paper, Vanilla, Bedrock and more..</li>
             					</div>
             					<div class="card-price py-1">
             						PHP 690 / <span>month</span>
@@ -269,6 +283,8 @@
             					<div class="card-header py-4">
             						<h2 class="mb-0">ZOMBIE PLAN</h2>
 									<li><i class=></i> Ryzen 9 5900X</li>
+									<li><i class=></i> Free 2 Allocation IP</li>
+									<li><i class=></i> Paper, Vanilla, Bedrock and more..</li>
             					</div>
             					<div class="card-price py-1">
             						PHP 920 / <span>month</span>
@@ -292,6 +308,8 @@
             					<div class="card-header py-4">
             						<h2 class="mb-0">SKELETON PLAN</h2>
 									<li><i class=></i> Ryzen 9 5900X</li>
+									<li><i class=></i> Free 2 Allocation IP</li>
+									<li><i class=></i> Paper, Vanilla, Bedrock and more..</li>
             					</div>
             					<div class="card-price py-1">
             						PHP 1,150 / <span>month</span>
@@ -315,6 +333,8 @@
             					<div class="card-header py-4">
             						<h2 class="mb-0">WITHER PLAN</h2>
 									<li><i class=></i> Ryzen 9 5900X</li>
+									<li><i class=></i> Free 3 Allocation IP</li>
+									<li><i class=></i> Paper, Vanilla, Bedrock and more..</li>
             					</div>
             					<div class="card-price py-1">
             						PHP 1,380 / <span>month</span>
@@ -338,6 +358,8 @@
             					<div class="card-header py-4">
             						<h2 class="mb-0">ENDERMAN PLAN</h2>
 									<li><i class=></i> Ryzen 9 5900X</li>
+									<li><i class=></i> Free 3 Allocation IP</li>
+									<li><i class=></i> Paper, Vanilla, Bedrock and more..</li>
             					</div>
             					<div class="card-price py-1">
             						PHP 1,610 / <span>month</span>
@@ -361,6 +383,8 @@
             					<div class="card-header py-4">
             						<h2 class="mb-0">SPIDER PLAN</h2>
 									<li><i class=></i> Ryzen 9 5900X</li>
+									<li><i class=></i> Free 3 Allocation IP</li>
+									<li><i class=></i> Paper, Vanilla, Bedrock and more..</li>
             					</div>
             					<div class="card-price py-1">
             						PHP 1,840 / <span>month</span>
@@ -377,8 +401,7 @@
             						</div>
             					</div>
             				</div>
-            			</div>
-            			
+            			</div>       			
             						</div>
             					</div>
             				</div>
@@ -427,20 +450,20 @@
 		</div>
 	</div>
 
-	<!-- Panel -->
+	<!-- Features -->
 	<div class="panel py-5">
 		<div class="container-fluid container-custom">
 			<div class="row d-flex justify-content-between">
-				<div class="col-md-5 d-flex align-items-center">
-					<img src="assets/images/panel.webp" class="img-fluid" alt="Game Panel">
+				<div class="col-md-5 d-flex align-items-center">					
 				</div>
 				<div class="col-md-7">
 					<div class="panel_content">
-						<h2>Powerful Controlpanel</h2>
+						<h2>Features</h2>
 						<ul>
-							<li><i class="fas fa-check-circle"></i> Easy To Use</li>
-							<li><i class="fas fa-check-circle"></i> Fast And Secured big anti ddos </li>
-							<li><i class="fas fa-check-circle"></i> Pre installed Plugins and auto setup</li>
+							<li><i class="fas fa-check-circle"></i> Easy To Use Panel</li>
+							<li><i class="fas fa-check-circle"></i> Fast And Secured 4Tbps anti ddos </li>
+							<li><i class="fas fa-check-circle"></i> Easy upload mods and plugins</li>
+							<li><i class="fas fa-check-circle"></i> Supported all Minecraft Version</li>
 						</ul>
 					</div>
 				</div>
