--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
 		<div class="container-fluid container-custom h-100">
 			<div class="row d-flex justify-content-center align-items-center h-100">
 				<div class="col-lg-6 me-auto hero_content">
-					<h2>FAST MINECRAFT 
-					HOSTING!</h2>
-					<p>Ahjin hosting is dedicated hosting located in Philippines. try the fastest and most affordable hosting.</p>
+					<h2>Start your best 
+					Minecraft Server with Ahjin!</h2>
+					<p>Ahjin is hosting provider located in Philippines. try the fastest and most affordable hosting.</p>
 					<a href="minecraft.html" class="btn">Explore Our Services</a>
 				</div>
 			</div>
@@ -188,7 +188,6 @@
 	            <div class="col-md-7 d-flex align-items-center">
 	            	<div class="minecraft_content">
 		                <h2>Create your <span class="blue">Minecraft server</span> today!</h2>
-		                <p>Everyone can create their own Minecraft server. Change your server configuration, change your version (Vanilla, Paper, Spigot,..) or install plugins or mods whenever your want with our Minecraft hosting.Your Minecraft server hosted by AhjinHosting has lots of exclusives features!
 						</p>
 	            	</div>
 	            </div>
