--- a/minecraft.html
+++ b/minecraft.html
@@ -226,7 +226,7 @@
             				<div class="card mc-card mb-0 text-center">
             					<img src="assets/images/bedrock.png" class="img-fluid plan-icons">
             					<div class="card-header py-4">
-            						<h2 class="mb-0">OBSIDIAN PLAN</h2>
+            						<h2 class="mb-0">BEDROCK PLAN</h2>
 									<li><i class=></i> Ryzen 7 5800X</li>
 									<li><i class=></i> Free 1 Allocation IP</li>
 									<li><i class=></i> Paper, Vanilla, Bedrock and more..</li>
