--- a/minecraft.html
+++ b/minecraft.html
@@ -107,7 +107,7 @@
 									<li><i class=></i> Paper, Vanilla, Bedrock and more..</li>
             					</div>
             					<div class="card-price py-1">
-            						PHP 165 / <span>month</span>
+            						$ 2.87 / <span>₱ 165 month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
@@ -132,7 +132,7 @@
 									<li><i class=></i> Paper, Vanilla, Bedrock and more..</li>
             					</div>
             					<div class="card-price py-1">
-            						PHP 220 / <span>month</span>
+            						$ 3.83 / <span>₱ 220 month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
@@ -157,7 +157,7 @@
 									<li><i class=></i> Paper, Vanilla, Bedrock and more..</li>
             					</div>
             					<div class="card-price py-1">
-            						PHP 275 / <span>month</span>
+            						$ 4.79 / <span>₱ 275 month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
@@ -182,7 +182,7 @@
 									<li><i class=></i> Paper, Vanilla, Bedrock and more..</li>
             					</div>
             					<div class="card-price py-1">
-            						PHP 330 / <span>month</span>
+            						$ 5.75 / <span>₱ 330 month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
@@ -207,7 +207,7 @@
 									<li><i class=></i> Paper, Vanilla, Bedrock and more..</li>
             					</div>
             					<div class="card-price py-1">
-            						PHP 385 / <span>month</span>
+            						$ 6.71 / <span>₱ 385 month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
@@ -232,7 +232,7 @@
 									<li><i class=></i> Paper, Vanilla, Bedrock and more..</li>
             					</div>
             					<div class="card-price py-1">
-            						PHP 440 / <span>month</span>
+            						$ 7.66 / <span>₱ 440 month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
@@ -262,7 +262,7 @@
 									<li><i class=></i> Paper, Vanilla, Bedrock and more..</li>
             					</div>
             					<div class="card-price py-1">
-            						PHP 690 / <span>month</span>
+            						$ 12.02 / <span>₱ 690 month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
@@ -287,7 +287,7 @@
 									<li><i class=></i> Paper, Vanilla, Bedrock and more..</li>
             					</div>
             					<div class="card-price py-1">
-            						PHP 920 / <span>month</span>
+            						$ 16.02 / <span>₱ 920 month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
@@ -312,7 +312,7 @@
 									<li><i class=></i> Paper, Vanilla, Bedrock and more..</li>
             					</div>
             					<div class="card-price py-1">
-            						PHP 1,150 / <span>month</span>
+            						$ 20.03 / <span>₱ 1,150 month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
@@ -337,7 +337,7 @@
 									<li><i class=></i> Paper, Vanilla, Bedrock and more..</li>
             					</div>
             					<div class="card-price py-1">
-            						PHP 1,380 / <span>month</span>
+            						$ 24.04 / <span>₱ 1,380 month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
@@ -362,7 +362,7 @@
 									<li><i class=></i> Paper, Vanilla, Bedrock and more..</li>
             					</div>
             					<div class="card-price py-1">
-            						PHP 1,610 / <span>month</span>
+            						$ 28.04 / <span>₱ 1,610 month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
@@ -387,7 +387,7 @@
 									<li><i class=></i> Paper, Vanilla, Bedrock and more..</li>
             					</div>
             					<div class="card-price py-1">
-            						PHP 1,840 / <span>month</span>
+            						$ 32.05 / <span>₱ 1,840 month</span>
             					</div>
             					<div class="card-body">
             						<ul class="list-unstyled">
