--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 		<div class="container-fluid container-custom h-100">
 			<div class="row d-flex justify-content-center align-items-center h-100">
 				<div class="col-lg-6 me-auto hero_content">
-					<h2>Start your best 
-					Minecraft Server with Ahjin!</h2>
+					<h2>Your premier Minecraft 
+						Hosting!</h2>
 					<p>Ahjin is hosting provider located in Philippines. try the fastest and most affordable hosting.</p>
 					<a href="minecraft.html" class="btn">Explore Our Services</a>
 				</div>
