--- a/minecraft.html
+++ b/minecraft.html
@@ -90,6 +90,82 @@
             </ul>
             	<!-- Premium Plans -->
             	<div id="premium" class="tab-pane">
+					<div class="row">
+            			<div class="col-lg-4 col-md-0">
+            				<div class="card mc-card mb-0 text-center">
+            					<img src="assets/images/sheep.png" class="img-fluid plan-icons">
+            					<div class="card-header py-4">
+            						<h2 class="mb-0">SHEEP PLAN</h2>
+									<li><i class=></i> Ryzen 9 5900X</li>
+									<li><i class=></i> Free 1 Allocation IP</li>
+									<li><i class=></i> Paper, Vanilla, Bedrock and more..</li>
+            					</div>
+            					<div class="card-price py-1">
+            						$ 1.74 / <span>₱ 100 month</span>
+            					</div>
+            					<div class="card-body">
+            						<ul class="list-unstyled">
+            							<li><i class="fad fa-memory"></i> 1GB DDR4</li>
+            							<li><i class="fad fa-hdd"></i> 15GB DISK</li>
+            							<li><i class="fad fa-microchip"></i> 100% CPU</li>
+            							<li><i class="fad fa-chart-network"></i> 1x BACK UP</li>
+            						</ul>
+            						<div class="mt-4">
+            							<a href="https://user.ahjin.shop/" class="btn">Order now</a>
+            						</div>
+            					</div>
+            				</div>
+            			</div>
+						<div class="col-lg-4 col-md-0">
+            				<div class="card mc-card mb-0 text-center">
+            					<img src="assets/images/pig.png" class="img-fluid plan-icons">
+            					<div class="card-header py-4">
+            						<h2 class="mb-0">PIG PLAN</h2>
+									<li><i class=></i> Ryzen 9 5900X</li>
+									<li><i class=></i> Free 1 Allocation IP</li>
+									<li><i class=></i> Paper, Vanilla, Bedrock and more..</li>
+            					</div>
+            					<div class="card-price py-1">
+            						$ 3.48 / <span>₱ 200 month</span>
+            					</div>
+            					<div class="card-body">
+            						<ul class="list-unstyled">
+            							<li><i class="fad fa-memory"></i> 2GB DDR4</li>
+            							<li><i class="fad fa-hdd"></i> 20GB DISK</li>
+            							<li><i class="fad fa-microchip"></i> 150% CPU</li>
+            							<li><i class="fad fa-chart-network"></i> 1x BACK UP</li>
+            						</ul>
+            						<div class="mt-4">
+            							<a href="https://user.ahjin.shop/" class="btn">Order now</a>
+            						</div>
+            					</div>
+            				</div>
+            			</div>
+            			<div class="col-lg-4 col-md-0">
+            				<div class="card mc-card mb-0 text-center">
+            					<img src="assets/images/cow.png" class="img-fluid plan-icons">
+            					<div class="card-header py-4">
+            						<h2 class="mb-0">COW PLAN</h2>
+									<li><i class=></i> Ryzen 9 5900X</li>
+									<li><i class=></i> Free 1 Allocation IP</li>
+									<li><i class=></i> Paper, Vanilla, Bedrock and more..</li>
+            					</div>
+            					<div class="card-price py-1">
+            						$ 6.96 / <span>₱ 400 month</span>
+            					</div>
+            					<div class="card-body">
+            						<ul class="list-unstyled">
+            							<li><i class="fad fa-memory"></i> 4GB DDR4</li>
+            							<li><i class="fad fa-hdd"></i> 30GB DISK</li>
+            							<li><i class="fad fa-microchip"></i> 200% CPU</li>
+            							<li><i class="fad fa-chart-network"></i> 1x BACK UP</li>
+            						</ul>
+            						<div class="mt-4">
+            							<a href="https://user.ahjin.shop/" class="btn">Order now</a>
+            						</div>
+            					</div>
+            				</div>
+            			</div>
             		<div class="row">
             			<div class="col-lg-4 col-md-0">
             				<div class="card mc-card mb-0 text-center">
